--- a/module/GradeBook/view/grade-book/grade/add.phtml
+++ b/module/GradeBook/view/grade-book/grade/add.phtml
@@ -14,29 +14,23 @@ $wage = $grade->get('wage');
 $wage->setAttribute('class', 'form-control');
 $wage->setAttribute('placeholder', 'Wage');
 
-//$course = $grade->get('course');
-//$course->setAttribute('id', 'course-select');
-//$course->setAttribute('class', 'form-control');
-//$courseOptions = [];
-//foreach ($additionalData['courses'] as $data) :
-//    $courseOptions[$data['id']] = $data['name'];
-//endforeach;
-//$course->setValueOptions($courseOptions);
+$course = $grade->get('course');
+$course->setAttribute('id', 'course-select');
+$course->setAttribute('class', 'form-control');
+$courseOptions = [];
+foreach ($courses as $data) :
+    $courseOptions[$data['id']] = $data['name'];
+endforeach;
+$course->setValueOptions($courseOptions);
 //$course->setEmptyOption('Select course');
 
-//$student = $grade->get('student');
-//$student->setAttribute('id', 'student-select');
-//$student->setAttribute('class', 'form-control');
-//$studentOptions = [];
-//foreach ($additionalData['courses'][$course->getValue()]['studentsCourse'] as $studentCourse) :
-//    $data = $studentCourse['student'];
-//    $studentOptions[$studentCourse['id']] = $data['firstName'] . ' ' . $data['lastName'];
-//endforeach;
-//$student->setValueOptions($studentOptions);
+$student = $grade->get('student');
+$student->setAttribute('id', 'student-select');
+$student->setAttribute('class', 'form-control');
 //$student->setEmptyOption('Select student');
 
-$studentCourse = $grade->get('studentCourse');
-$studentCourse->setAttribute('id', 'student-course-select');
+//$studentCourse = $grade->get('studentCourse');
+//$studentCourse->setAttribute('id', 'student-course-select');
 
 $submit = $form->get('submit');
 $submit->setAttribute('class', 'btn btn-primary');
@@ -58,41 +52,41 @@ echo $this->form()->openTag($form);
     <?= $this->formElementErrors()->render($wage, ['class' => 'help-block']) ?>
 </div>
 
-<div class="form-group">
-    <label for="course-select">Course</label>
-    <select id="course-select" class="form-control">
-        <option value="" selected="selected">Select course</option>
-        <?php foreach ($courses as $data) :?>
-            <option value="<?= $data['id']; ?>">
-                <?= $data['name']; ?>
-            </option>
-        <?php endforeach; ?>
-    </select>
-</div>
-
-<div class="form-group">
-    <label for="student-select">Student</label>
-    <select id="student-select" class="form-control">
-        <option value="" selected="selected">Select student</option>
-    </select>
-</div>
-
-<!--    <div class="form-group">-->
-<!--        --><?php //= $this->formLabel($course) ?>
-<!--        --><?php //= $this->formSelect($course) ?>
-<!--        --><?php //= $this->formElementErrors()->render($course, ['class' => 'help-block']) ?>
-<!--    </div>-->
+<!--<div class="form-group">-->
+<!--    <label for="course-select">Course</label>-->
+<!--    <select id="course-select" class="form-control">-->
+<!--        <option value="" selected="selected">Select course</option>-->
+<!--        --><?php //foreach ($courses as $data) :?>
+<!--            <option value="--><?php //= $data['id']; ?><!--">-->
+<!--                --><?php //= $data['name']; ?>
+<!--            </option>-->
+<!--        --><?php //endforeach; ?>
+<!--    </select>-->
+<!--</div>-->
 <!---->
-<!--    <div class="form-group">-->
-<!--        --><?php //= $this->formLabel($student) ?>
-<!--        --><?php //= $this->formSelect($student) ?>
-<!--        --><?php //= $this->formElementErrors()->render($student, ['class' => 'help-block']) ?>
-<!--    </div>-->
+<!--<div class="form-group">-->
+<!--    <label for="student-select">Student</label>-->
+<!--    <select id="student-select" class="form-control">-->
+<!--        <option value="" selected="selected">Select student</option>-->
+<!--    </select>-->
+<!--</div>-->
+
+<div class="form-group">
+    <?= $this->formLabel($course) ?>
+    <?= $this->formSelect($course) ?>
+    <?= $this->formElementErrors()->render($course, ['class' => 'help-block']) ?>
+</div>
+
+<div class="form-group">
+    <?= $this->formLabel($student) ?>
+    <?= $this->formSelect($student) ?>
+    <?= $this->formElementErrors()->render($student, ['class' => 'help-block']) ?>
+</div>
 
 <?php
 echo $this->formSubmit($submit);
 echo $this->formHidden($grade->get('id'));
-echo $this->formHidden($studentCourse);
+//echo $this->formHidden($studentCourse);
 echo $this->form()->closeTag($form);
 ?>
 
