Added variable annotations in views

--- a/module/GradeBook/view/grade-book/admin/edit.phtml
+++ b/module/GradeBook/view/grade-book/admin/edit.phtml
@@ -1,4 +1,10 @@
 <?php
+/**
+ * @var AdminForm $form
+ * @var int $id
+ */
+
+use GradeBook\Form\AdminForm;
 
 $title = "Edit admin";
 $this->headTitle($title);
