--- a/module/GradeBook/view/grade-book/course/add.phtml
+++ b/module/GradeBook/view/grade-book/course/add.phtml
@@ -1,4 +1,10 @@
 <?php
+/**
+ * @var CourseForm $form
+ * @var array $teachers
+ */
+
+use GradeBook\Form\CourseForm;
 
 $title = 'Add new course';
 $this->headTitle($title);
