--- a/module/GradeBook/view/grade-book/course/edit.phtml
+++ b/module/GradeBook/view/grade-book/course/edit.phtml
@@ -1,4 +1,11 @@
 <?php
+/**
+ * @var CourseForm $form
+ * @var array $teachers
+ * @var int $id
+ */
+
+use GradeBook\Form\CourseForm;
 
 $title = "Edit course";
 $this->headTitle($title);
