--- a/module/GradeBook/view/grade-book/grade/add.phtml
+++ b/module/GradeBook/view/grade-book/grade/add.phtml
@@ -1,4 +1,10 @@
 <?php
+/**
+ * @var GradeForm $form
+ * @var array $courses
+ */
+
+use GradeBook\Form\GradeForm;
 
 $title = "Add grade";
 $this->headTitle($title);
