--- a/module/GradeBook/view/grade-book/grade/delete.phtml
+++ b/module/GradeBook/view/grade-book/grade/delete.phtml
@@ -1,4 +1,9 @@
 <?php
+/**
+ * @var Grade $grade
+ */
+
+use GradeBook\Entity\Grade;
 
 $title = 'Delete grade';
 $url   = $this->url('grade', ['action' => 'delete', 'id' => $id]);
