--- a/module/GradeBook/view/grade-book/grade/edit.phtml
+++ b/module/GradeBook/view/grade-book/grade/edit.phtml
@@ -1,4 +1,11 @@
 <?php
+/**
+ * @var GradeForm $form
+ * @var array $courses
+ * @var int $id
+ */
+
+use GradeBook\Form\GradeForm;
 
 $title = "Edit grade";
 $this->headTitle($title);
