--- a/module/GradeBook/view/grade-book/student-course/add.phtml
+++ b/module/GradeBook/view/grade-book/student-course/add.phtml
@@ -1,4 +1,10 @@
 <?php
+/**
+ * @var StudentCourseForm $form
+ * @var array $studentsCourses
+ */
+
+use GradeBook\Form\StudentCourseForm;
 
 $title = 'Enroll student in course';
 $this->headTitle($title);
