--- a/module/GradeBook/view/grade-book/student-course/edit.phtml
+++ b/module/GradeBook/view/grade-book/student-course/edit.phtml
@@ -1,4 +1,14 @@
 <?php
+/**
+ * @var array $studentsCourses
+ * @var Student $studentData
+ * @var StudentForm $form
+ * @var int $studentId
+ * @var int $courseId
+ */
+
+use GradeBook\Entity\Student;
+use GradeBook\Form\StudentForm;
 
 $title = 'Edit relationship between student and course';
 $this->headTitle($title);
