--- a/module/GradeBook/view/grade-book/student-course/index.phtml
+++ b/module/GradeBook/view/grade-book/student-course/index.phtml
@@ -1,4 +1,9 @@
 <?php
+/**
+ * @var array<StudentCourse> $studentCourses
+ */
+
+use GradeBook\Entity\StudentCourse;
 
 $title = 'Students enrolled in courses';
 $this->headTitle($title);
