--- a/module/GradeBook/view/grade-book/student/add.phtml
+++ b/module/GradeBook/view/grade-book/student/add.phtml
@@ -1,4 +1,9 @@
 <?php
+/**
+ * @var StudentForm $form
+ */
+
+use GradeBook\Form\StudentForm;
 
 $title = 'Add new student';
 $this->headTitle($title);
