--- a/module/GradeBook/view/grade-book/student/delete.phtml
+++ b/module/GradeBook/view/grade-book/student/delete.phtml
@@ -1,4 +1,10 @@
 <?php
+/**
+ * @var int $id
+ * @var Student $student
+ */
+
+use GradeBook\Entity\Student;
 
 $title = 'Delete student';
 $url   = $this->url('student', ['action' => 'delete', 'id' => $id]);
