--- a/module/GradeBook/view/grade-book/student/edit.phtml
+++ b/module/GradeBook/view/grade-book/student/edit.phtml
@@ -1,4 +1,10 @@
 <?php
+/**
+ * @var StudentForm $form
+ * @var int $id
+ */
+
+use GradeBook\Form\StudentForm;
 
 $title = "Edit student";
 $this->headTitle($title);
