--- a/module/GradeBook/view/grade-book/student/index.phtml
+++ b/module/GradeBook/view/grade-book/student/index.phtml
@@ -1,4 +1,9 @@
 <?php
+/**
+ * @var array<Student> $students
+ */
+
+use GradeBook\Entity\Student;
 
 $title = 'Students';
 $this->headTitle($title);
