--- a/module/GradeBook/view/grade-book/student/show.phtml
+++ b/module/GradeBook/view/grade-book/student/show.phtml
@@ -1,4 +1,10 @@
 <?php
+/**
+ * @var Student $student
+ * @var array $courses
+ */
+
+use GradeBook\Entity\Student;
 
 $title = $this->escapeHtml($student->getFirstName()) . ' ' . $this->escapeHtml($student->getLastName());
 $this->headTitle($title);
