--- a/module/GradeBook/view/grade-book/teacher/add.phtml
+++ b/module/GradeBook/view/grade-book/teacher/add.phtml
@@ -1,4 +1,9 @@
 <?php
+/**
+ * @var TeacherForm $form
+ */
+
+use GradeBook\Form\TeacherForm;
 
 $title = 'Add new teacher';
 $this->headTitle($title);
