--- a/module/GradeBook/view/grade-book/teacher/delete.phtml
+++ b/module/GradeBook/view/grade-book/teacher/delete.phtml
@@ -1,4 +1,10 @@
 <?php
+/**
+ * @var int $id
+ * @var Teacher $teacher
+ */
+
+use GradeBook\Entity\Teacher;
 
 $title = 'Delete teacher';
 $url   = $this->url('teacher', ['action' => 'delete', 'id' => $id]);
