--- a/module/GradeBook/view/grade-book/teacher/edit.phtml
+++ b/module/GradeBook/view/grade-book/teacher/edit.phtml
@@ -1,4 +1,10 @@
 <?php
+/**
+ * @var TeacherForm $form
+ * @var int $id
+ */
+
+use GradeBook\Form\TeacherForm;
 
 $title = "Edit teacher";
 $this->headTitle($title);
