--- a/module/GradeBook/view/grade-book/teacher/index.phtml
+++ b/module/GradeBook/view/grade-book/teacher/index.phtml
@@ -1,4 +1,9 @@
 <?php
+/**
+ * @var array<Teacher> $teachers
+ */
+
+use GradeBook\Entity\Teacher;
 
 $title = 'Teachers';
 $this->headTitle($title);
