--- a/module/GradeBook/view/grade-book/admin/delete.phtml
+++ b/module/GradeBook/view/grade-book/admin/delete.phtml
@@ -1,4 +1,9 @@
 <?php
+/**
+ * @var Admin $admin
+ */
+
+use GradeBook\Entity\Admin;
 
 $title = 'Delete admin';
 $url   = $this->url('admin', ['action' => 'delete', 'id' => $id]);
