--- a/module/GradeBook/view/grade-book/admin/delete.phtml
+++ b/module/GradeBook/view/grade-book/admin/delete.phtml
@@ -1,24 +1,19 @@
 <?php
-/**
- * @var Admin $admin
- */
-
-use GradeBook\Entity\Admin;
 
 $title = 'Delete admin';
-$url   = $this->url('admin', ['action' => 'delete', 'id' => $id]);
+$url   = $this->url('admin', ['action' => 'delete', 'id' => $this->id]);
 $this->headTitle($title);
 ?>
 <h1><?= $this->escapeHtml($title) ?></h1>
 <p>
     Are you sure you want to delete
-    <?= $this->escapeHtml($admin->getFirstName()) ?>
-    <?= $this->escapeHtml($admin->getLastName()) ?>?
+    <?= $this->escapeHtml($this->admin->getFirstName()) ?>
+    <?= $this->escapeHtml($this->admin->getLastName()) ?>?
 </p>
 
 <form action="<?= $url ?>" method="post">
     <div class="form-group">
-        <input type="hidden" name="id" value="<?= $admin->getId() ?>" />
+        <input type="hidden" name="id" value="<?= $this->admin->getId() ?>" />
         <input type="submit" class="btn btn-danger" name="del" value="Yes" />
         <input type="submit" class="btn btn-success" name="del" value="No" />
     </div>
