--- a/module/GradeBook/view/grade-book/admin/edit.phtml
+++ b/module/GradeBook/view/grade-book/admin/edit.phtml
@@ -1,17 +1,11 @@
 <?php
-/**
- * @var AdminForm $form
- * @var int $id
- */
-
-use GradeBook\Form\AdminForm;
 
 $title = "Edit admin";
 $this->headTitle($title);
 ?>
     <h1><?= $this->escapeHtml($title) ?></h1>
 <?php
-$admin = $form->get('admin');
+$admin = $this->form->get('admin');
 $firstName = $admin->get('firstName');
 $firstName->setAttribute('class', 'form-control');
 $firstName->setAttribute('placeholder', 'First name');
@@ -20,16 +14,16 @@ $lastName = $admin->get('lastName');
 $lastName->setAttribute('class', 'form-control');
 $lastName->setAttribute('placeholder', 'Last name');
 
-$submit = $form->get('submit');
+$submit = $this->form->get('submit');
 $submit->setAttribute('class', 'btn btn-primary');
 
-$form->setAttribute('action', $this->url('admin', [
+$this->form->setAttribute('action', $this->url('admin', [
     'action' => 'edit',
-    'id'     => $id,
+    'id'     => $this->id,
 ]));
-$form->prepare();
+$this->form->prepare();
 
-echo $this->form()->openTag($form);
+echo $this->form()->openTag($this->form);
 ?>
 <div class="form-group">
     <?= $this->formLabel($firstName) ?>
@@ -46,4 +40,4 @@ echo $this->form()->openTag($form);
 <?php
 echo $this->formSubmit($submit);
 echo $this->formHidden($admin->get('id'));
-echo $this->form()->closeTag($form);
+echo $this->form()->closeTag($this->form);
