--- a/module/GradeBook/view/grade-book/course/delete.phtml
+++ b/module/GradeBook/view/grade-book/course/delete.phtml
@@ -1,24 +1,18 @@
 <?php
-/**
- * @var Course $course
- * @var int $id
- */
-
-use GradeBook\Entity\Course;
 
 $title = 'Delete course';
-$url   = $this->url('course', ['action' => 'delete', 'id' => $id]);
+$url   = $this->url('course', ['action' => 'delete', 'id' => $this->id]);
 $this->headTitle($title);
 ?>
 <h1><?= $this->escapeHtml($title) ?></h1>
 <p>
     Are you sure you want to delete
-    <?= $this->escapeHtml($course->getName()) ?> course?
+    <?= $this->escapeHtml($this->course->getName()) ?> course?
 </p>
 
 <form action="<?= $url ?>" method="post">
     <div class="form-group">
-        <input type="hidden" name="id" value="<?= $course->getId() ?>" />
+        <input type="hidden" name="id" value="<?= $this->course->getId() ?>" />
         <input type="submit" class="btn btn-danger" name="del" value="Yes" />
         <input type="submit" class="btn btn-success" name="del" value="No" />
     </div>
