--- a/module/GradeBook/view/grade-book/course/edit.phtml
+++ b/module/GradeBook/view/grade-book/course/edit.phtml
@@ -1,18 +1,11 @@
 <?php
-/**
- * @var CourseForm $form
- * @var array $teachers
- * @var int $id
- */
-
-use GradeBook\Form\CourseForm;
 
 $title = "Edit course";
 $this->headTitle($title);
 ?>
     <h1><?= $this->escapeHtml($title) ?></h1>
 <?php
-$course = $form->get('course');
+$course = $this->form->get('course');
 $name = $course->get('name');
 $name->setAttribute('class', 'form-control');
 $name->setAttribute('placeholder', 'Name');
@@ -21,21 +14,21 @@ $teacher = $course->get('teacher');
 $teacher->setAttribute('class', 'form-control');
 $teacher->setAttribute('placeholder', 'Teacher');
 $options = [];
-foreach ($teachers as $data) :
+foreach ($this->teachers as $data) :
     $options[$data['id']] = $data['firstName'] . ' ' . $data['lastName'];
 endforeach;
 $teacher->setValueOptions($options);
 
-$submit = $form->get('submit');
+$submit = $this->form->get('submit');
 $submit->setAttribute('class', 'btn btn-primary');
 
-$form->setAttribute('action', $this->url('course', [
+$this->form->setAttribute('action', $this->url('course', [
     'action' => 'edit',
-    'id'     => $id,
+    'id'     => $this->id,
 ]));
-$form->prepare();
+$this->form->prepare();
 
-echo $this->form()->openTag($form);
+echo $this->form()->openTag($this->form);
 ?>
     <div class="form-group">
         <?= $this->formLabel($name) ?>
@@ -52,4 +45,4 @@ echo $this->form()->openTag($form);
 <?php
 echo $this->formSubmit($submit);
 echo $this->formHidden($course->get('id'));
-echo $this->form()->closeTag($form);
+echo $this->form()->closeTag($this->form);
