--- a/module/GradeBook/view/grade-book/grade/add.phtml
+++ b/module/GradeBook/view/grade-book/grade/add.phtml
@@ -1,17 +1,11 @@
 <?php
-/**
- * @var GradeForm $form
- * @var array $courses
- */
-
-use GradeBook\Form\GradeForm;
 
 $title = "Add grade";
 $this->headTitle($title);
 ?>
 <h1><?= $this->escapeHtml($title) ?></h1>
 <?php
-$grade = $form->get('grade');
+$grade = $this->form->get('grade');
 $value = $grade->get('value');
 $value->setAttribute('class', 'form-control');
 $value->setAttribute('placeholder', 'Grade');
@@ -24,7 +18,7 @@ $course = $grade->get('course');
 $course->setAttribute('id', 'course-select');
 $course->setAttribute('class', 'form-control');
 $courseOptions = [];
-foreach ($courses as $data) :
+foreach ($this->courses as $data) :
     $courseOptions[$data['id']] = $data['name'];
 endforeach;
 $course->setValueOptions($courseOptions);
@@ -38,13 +32,13 @@ $student->setAttribute('class', 'form-control');
 //$studentCourse = $grade->get('studentCourse');
 //$studentCourse->setAttribute('id', 'student-course-select');
 
-$submit = $form->get('submit');
+$submit = $this->form->get('submit');
 $submit->setAttribute('class', 'btn btn-primary');
 
-$form->setAttribute('action', $this->url('grade', ['action' => 'add']));
-$form->prepare();
+$this->form->setAttribute('action', $this->url('grade', ['action' => 'add']));
+$this->form->prepare();
 
-echo $this->form()->openTag($form);
+echo $this->form()->openTag($this->form);
 ?>
 <div class="form-group">
     <?= $this->formLabel($value) ?>
@@ -93,10 +87,10 @@ echo $this->form()->openTag($form);
 echo $this->formSubmit($submit);
 echo $this->formHidden($grade->get('id'));
 //echo $this->formHidden($studentCourse);
-echo $this->form()->closeTag($form);
+echo $this->form()->closeTag($this->form);
 ?>
 
 <script type="text/javascript">
-    const courses = <?= json_encode($courses) ?>;
+    const courses = <?= json_encode($this->courses) ?>;
 </script>
 <script type="text/javascript" src="/js/updateStudentForm.js"></script>
