--- a/module/GradeBook/view/grade-book/student/index.phtml
+++ b/module/GradeBook/view/grade-book/student/index.phtml
@@ -1,9 +1,4 @@
 <?php
-/**
- * @var array<Student> $students
- */
-
-use GradeBook\Entity\Student;
 
 $title = 'Students';
 $this->headTitle($title);
@@ -19,7 +14,7 @@ $this->headTitle($title);
         <th>Last name</th>
         <th>&nbsp;</th>
     </tr>
-    <?php foreach ($students as $student) : ?>
+    <?php foreach ($this->students as $student) : ?>
         <tr>
             <td><?= $this->escapeHtml($student->getFirstName()) ?></td>
             <td><?= $this->escapeHtml($student->getLastName()) ?></td>
