--- a/module/GradeBook/view/grade-book/student-course/edit.phtml
+++ b/module/GradeBook/view/grade-book/student-course/edit.phtml
@@ -62,4 +62,4 @@ echo $this->form()->closeTag($this->form);
 <script type="text/javascript">
     const courses = <?= json_encode($this->studentsCourses) ?>;
 </script>
-<script type="text/javascript" src="/js/updateStudentForm.js"></script>
+<?= $this->inlineScript()->prependFile('/js/updateStudentForm.js') ?>
