--- a/module/GradeBook/view/grade-book/student/edit.phtml
+++ b/module/GradeBook/view/grade-book/student/edit.phtml
@@ -1,7 +1,10 @@
 <?php
-
+/**
+ * @var Laminas\View\Renderer\PhpRenderer|Laminas\Form\View\HelperTrait $this
+ */
 $title = "Edit student";
 $this->headTitle($title);
+echo $this->partial('partial/menu.phtml');
 ?>
     <h1><?= $this->escapeHtml($title) ?></h1>
 <?php
@@ -41,4 +44,4 @@ echo $this->form()->openTag($this->form);
 <?php
 echo $this->formSubmit($submit);
 echo $this->formHidden($student->get('id'));
-echo $this->form()->closeTag($this->form);
+echo $this->form()->closeTag();
