--- a/module/GradeBook/view/grade-book/student-course/edit.phtml
+++ b/module/GradeBook/view/grade-book/student-course/edit.phtml
@@ -1,7 +1,10 @@
 <?php
-
+/**
+ * @var Laminas\View\Renderer\PhpRenderer|Laminas\Form\View\HelperTrait $this
+ */
 $title = 'Edit relationship between student and course';
 $this->headTitle($title);
+echo $this->partial('partial/menu.phtml');
 ?>
 <h1><?= $this->escapeHtml($title) ?></h1>
 <?php
@@ -56,7 +59,7 @@ echo $this->form()->openTag($this->form);
 
 <?php
 echo $this->formSubmit($submit);
-echo $this->form()->closeTag($this->form);
+echo $this->form()->closeTag();
 ?>
 
 <script type="text/javascript">
