--- a/module/GradeBook/view/grade-book/teacher/delete.phtml
+++ b/module/GradeBook/view/grade-book/teacher/delete.phtml
@@ -1,10 +1,11 @@
 <?php
-
-use GradeBook\Entity\Teacher;
-
+/**
+ * @var Laminas\View\Renderer\PhpRenderer $this
+ */
 $title = 'Delete teacher';
 $url   = $this->url('teacher', ['action' => 'delete', 'id' => $this->id]);
 $this->headTitle($title);
+echo $this->partial('partial/menu.phtml');
 ?>
 <h1><?= $this->escapeHtml($title) ?></h1>
 <p>
